# cpp-pytorch

./: CMakeLists.txt  example-app.cpp  readme.md
libtorch/: build-hash
libtorch/lib/: libc10.dylib  libcaffe2_detectron_ops.dylib  libcaffe2_module_test_dynamic.dylib  libcaffe2_observers.dylib  libfoxi_dummy.dylib  libshm.dylib
